mypy_comm_router.txt
src/dotmac/platform/communications/router.py:15:1: error: Module "pydantic" has
no attribute "ValidationError"; maybe "ValidationInfo"?  [attr-defined]
    from pydantic import BaseModel, ConfigDict, EmailStr, Field, Validatio...
    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~...
src/dotmac/platform/communications/router.py: note: In function "send_email_endpoint":
src/dotmac/platform/communications/router.py:82:24: error:
"Coroutine[Any, Any, AsyncIterator[AsyncSession]]" has no attribute "__aenter__"
 [attr-defined]
                async with get_async_session_context() as db:
                           ^~~~~~~~~~~~~~~~~~~~~~~~~~~
src/dotmac/platform/communications/router.py:82:24: error:
"Coroutine[Any, Any, AsyncIterator[AsyncSession]]" has no attribute "__aexit__" 
[attr-defined]
                async with get_async_session_context() as db:
                           ^~~~~~~~~~~~~~~~~~~~~~~~~~~
src/dotmac/platform/communications/router.py:127:33: error:
"Coroutine[Any, Any, AsyncIterator[AsyncSession]]" has no attribute "__aiter__"
(not async iterable)  [attr-defined]
                    async for db in session_ctx:
                                    ^~~~~~~~~~~
src/dotmac/platform/communications/router.py:127:33: note: Maybe you forgot to use "await"?
src/dotmac/platform/communications/router.py: note: In function "get_communication_stats":
src/dotmac/platform/communications/router.py:553:25: error:
"Coroutine[Any, Any, AsyncIterator[AsyncSession]]" has no attribute "__aiter__"
(not async iterable)  [attr-defined]
            async for db in session_ctx:
                            ^~~~~~~~~~~
src/dotmac/platform/communications/router.py:553:25: note: Maybe you forgot to use "await"?
src/dotmac/platform/communications/router.py: note: In function "get_recent_activity":
src/dotmac/platform/communications/router.py:597:25: error:
"Coroutine[Any, Any, AsyncIterator[AsyncSession]]" has no attribute "__aiter__"
(not async iterable)  [attr-defined]
            async for db in session_ctx:
                            ^~~~~~~~~~~
src/dotmac/platform/communications/router.py:597:25: note: Maybe you forgot to use "await"?
Found 6 errors in 1 file (checked 1 source file)
